[tool.poetry]
name = "pandas-et"
version = "0.1.0"
description = ""
authors = ["Kirill Varchenko <kirill.varchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "pandas_et"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pydantic = "^2.5.2"
natsort = "^8.4.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]